--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </linearGradient>
           </defs>
         </svg>
-        <p class="nav__title">Staack</p>
+        <a href="https://github.com/LoockBTL/staack.github.io" class="nav__title">Staack</a>
       </div>
       <div class="nav__right">
         <div id="wrapper" class="wrapper wrapper__disabled"></div>
